# HeterogeneousComputingOpsDevTemplate

./: .gitignore  .gitmodules  README.md  README.zh.md
CPU/: CMakeLists.txt
CPU/python_test/: test.py
ascend_c_ops/: README.md
ascend_c_ops/ascendc_add_kernel_invocation/: main.cpp
ascend_c_ops/kernel_invocation/Add/: README.md  add_custom_cpu
ascend_c_ops/kernel_invocation/MatMul/: README.md  cmake  main.cpp  matmul_custom.cpp  readme.md
ascend_c_ops/kernel_template/: run.sh
ascend_c_ops/pybind11_pytorch/: README.md
ascend_c_ops_dev/: AscendEnvTestScript.sh  README.md
ascend_c_ops_dev/0.helloAscendC/: .gitignore  README.md  run.sh
ascend_c_ops_dev/1.1.vectorParadigm_kernel_invocation/Add/: add_custom.cpp  add_custom_npu
ascend_c_ops_dev/1.2.vectorParadigm_framework/: README.md
ascend_c_ops_dev/1.2.vectorParadigm_msopgen_framework/: README.md
ascend_c_ops_dev/1.2.vectorParadigm_msopgen_framework/framework/tf_plugin/: tensorflow_add_custom_plugin.cc
ascend_c_ops_dev/2.cubeParadigm/op_host/: matmul_custom.cpp  matmul_custom_tiling.h
ascend_c_ops_dev/2.cubeParadigm/op_kernel/: matmul_custom.cpp
ascend_c_ops_dev/3.mixVectorCubeParadigm/op_host/: matmul_leakyrelu_custom.cpp
ascend_c_ops_dev/3.mixVectorCubeParadigm/op_kernel/: matmul_leakyrelu_custom.cpp
ascend_c_ops_pybind11/MindsPoreCustomOps/: test.sh
cpp_ops/: CMakeLists.txt  README.md
cpp_ops/src/: my_mindspore_ops_impl.cpp
cuda_cpp_ops/: .gitignore  CMakeLists.txt  README.md  main4cpp_call_cuda_kernel.cpp
cuda_cpp_ops/inc/: run_array_mul_scalar.hpp  run_kernel4elementwise_add_float4.hpp
cuda_cpp_ops/src/: CMakeLists.txt  my_gpu_ops_binder.cpp
cuda_cpp_ops/src/cpp/: add.cpp
cuda_cpp_ops/src/cuda/: add.cu  run_array_mul_scalar.cu  run_kernel4elementwise_add_float4.cu
cuda_cpp_ops/test/: test_add.py  test_multiply_with_scalar.py
